Add OmniGraffle diagram and exported PDF for notation
Move images into separate directory

fix image link in original TeX

--- a/doc/jointcal.tex
+++ b/doc/jointcal.tex
@@ -152,7 +152,7 @@ and from the image catalog.
 
 \begin{figure}[ht]
 \centering
-\includegraphics[width=0.8\textwidth]{AssocClasses}
+\includegraphics[width=0.8\textwidth]{images/AssocClasses}
 \captionsetup{margin={0.07\textwidth,0.07\textwidth}}% only for this figure
 \caption{Chart of class relations which implement the associations
 between input catalogs. One \ClName{FittedStar} usually has several
